@@ -32,6 +32,8 @@
 - Added SplObjectStorage::getHash() hook. (Etienne)
 - Added JsonSerializable interface (Sara)
 - Added support for storing upload progress feedback in session data. (Arnaud)
+- Added support for CURLOPT_MAX_RECV_SPEED_LARGE and CURLOPT_MAX_SEND_SPEED_LARGE.
+  FR #51815. (Pierrick)
 
 - default_charset if not specified is now UTF-8 instead of ISO-8859-1. (Rasmus)
 
